# electronics_retail_chain

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  views.py
suppliers/: admin.py  models.py  serializers.py  views.py
suppliers/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
